--- a/src/styles.css
+++ b/src/styles.css
@@ -29,8 +29,22 @@
 }
 
 .grow {
-  transform: scale(1.3);
-  transform-origin: center;
+  animation: grow .2s linear;
+}
+
+@keyframes grow {
+  0% {
+    transform: scale(1);
+  }
+  35% {
+    transform: scale(1.2);
+  }
+  70% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 button {
